# arcticgameengine

./: CMakeLists.txt  LICENSE  README.md
Private/Include/: ATAudioWave_Internal.h  ATAudio_Internal.h  ATBasicFontData.h  ATEndian_Internal.h  ATImageLoader_Internal.h  ATInputCursor_Internal.h  ATInput_Internal.h  ATReflection_Internal.h  ATRenderElement_Internal.h  ATRender_Editor.h  ATRender_Internal.h  ATSprite_Internal.h  ATSystem_Internal.h  ATTexture_Internal.h
Private/Include/Android/: ATInput_Android_Internal.h  ATSystem_Android_Internal.h
Private/Include/Iphone/: ATAppDelegate.h  ATEAGLView.h
Private/Source/: AT.cpp  ATAudio.cpp  ATAudioWave.cpp  ATBasicFont.cpp  ATDebug.cpp  ATImageLoader.cpp  ATInput.cpp  ATInputCursor.cpp  ATMath.cpp  ATMatrix.cpp  ATMemory.cpp  ATPrimitive.cpp  ATReflection.cpp  ATRender.cpp  ATSprite.cpp  ATString.cpp  ATSystem.cpp  ATTexture.cpp  ATTime.cpp  ATUI.cpp  ATUpdateLayer.cpp  ATVector4.cpp
Private/Source/Android/: ATAudio_Android.cpp  ATFile_Android.cpp  ATInput_Android.cpp  ATInput_Android_MOGA.cpp  ATInput_Android_OUYA.cpp  ATResource_Android.cpp  ATSystem_Android.cpp  ATTime_Android.cpp  (+1 more)
Private/VulkanTest/: Rendering_Vulkan.cpp  Rendering_Vulkan.h
Public/Include/: AT.h  ATArray.h  ATAudio.h  ATBasicFont.h  ATDebug.h  ATFile.h  ATHashTable.h  ATInput.h  ATInputCursor.h  ATMath.h  ATMatrix.h  ATMemory.h  ATPrimitive.h  ATProjection.h  ATReflection.h  ATRender.h  ATResource.h  ATSprite.h  ATString.h  ATSystem.h  ATTargets.h  ATTexture.h  ATTime.h  ATTypes.h  ATUI.h  ATUpdateLayer.h  ATUtil.h  ATVector4.h
(+31 files in other folders)
